--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Oct 10 2024 04:59:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6652b5fe8b360cc1f35585f5" data-wf-site="6652b5fe8b360cc1f35585ea">
 <head>
+  <meta http-equiv="refresh" content="2;url=http://www.opensourcementorship.in/" />
   <meta charset="utf-8">
   <title>OSM</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
